--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,6 +2,29 @@
 image:
   file: .gitpod.Dockerfile
 
+tasks:
+  - name: MySQL
+    command: |
+      docker run -d --rm --name mysql --network=host -e MYSQL_ROOT_PASSWORD=Masterkey123 -e MYSQL_DATABASE=piggybank mysql:8
+      gp sync-done mysql-up
+
+  - name: Keycloak
+    init: gp sync-await mysql-up
+    command: |
+      docker run --rm --name keycloak \
+        --network=host \
+        -e KEYCLOAK_ADMIN=admin \
+        -e KEYCLOAK_ADMIN_PASSWORD=Masterkey123 \
+        -e KC_DB=mysql \
+        -e KC_DB_URL=jdbc:mysql://127.0.0.1:3306/piggybank \
+        -e KC_DB_USERNAME=root \
+        -e KC_DB_PASSWORD=Masterkey123 \
+        -e KC_HOSTNAME_STRICT=true \
+        -e KC_HOSTNAME_STRICT_BACKCHANNEL=true \
+        -e KC_LOG_LEVEL=info \
+        quay.io/keycloak/keycloak:18.0.0 \
+        start-dev
+  
 
 ports:
   - port: 5000
@@ -9,7 +32,7 @@ ports:
     visibility: public
 
   - port: 8080
-    onOpen: ignore
+    onOpen: open-browser
     visibility: public
 
   - port: 8888
