--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -27,6 +27,10 @@ tasks:
   
 
 ports:
+  - port: 3306
+    onOpen: ignore
+    visibility: public
+
   - port: 5000
     onOpen: ignore
     visibility: public
