--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,32 +3,18 @@ image:
   file: .gitpod.Dockerfile
 
 tasks:
-  - name: MySQL
-    command: |
-      docker run -d --rm \
-        --name mysql \
-        --network=host \
-        -e MYSQL_ROOT_PASSWORD=Masterkey123 \
-        -e MYSQL_DATABASE=redpod\
-        mysql:8
-
-  - name: Keycloak
-    command: |
-      docker run --rm --name keycloak \
-        --network=host \
-        -e KEYCLOAK_ADMIN=admin \
-        -e KEYCLOAK_ADMIN_PASSWORD=Masterkey123 \
-        -e KC_DB=mysql \
-        -e KC_DB_URL=jdbc:mysql://127.0.0.1:3306/redpod \
-        -e KC_DB_USERNAME=root \
-        -e KC_DB_PASSWORD=Masterkey123 \
-        -e KC_HOSTNAME=${HOSTNAME}.${GITPOD_WORKSPACE_CLUSTER_HOST} \
-        -e KC_HOSTNAME_STRICT=true \
-        -e KC_HOSTNAME_STRICT_BACKCHANNEL=true \
-        -e KC_LOG_LEVEL=info \
-        quay.io/keycloak/keycloak:18.0.0 \
-        start-dev
+  - name: docker compose
+    command: docker-compose -f .gitpod/docker-compose-gitpod.yml up -d --build
   
+  - name: mysql
+    command: docker logs -f mysql
+
+  - name: mysql-client
+    command: mysql -h127.0.0.1 -P3306 -uroot -pMasterkey123 redpoddb
+
+  - name: keycloak
+    command: docker logs -f keycloak
+
 
 ports:
   - port: 3300
