--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,8 +5,7 @@ image:
 tasks:
   - name: docker compose
     init: >
-      docker-compose -f .gitpod/docker-compose-gitpod.yml up -d --build &&
-      sleep 5 &&
+      docker-compose -f .gitpod/docker-compose-gitpod.yml up -d --build
       gp sync-done compose-up
   
   - name: mysql
@@ -15,11 +14,16 @@ tasks:
 
   - name: mysql-client
     init: gp sync-await compose-up
-    command: mysql -h127.0.0.1 -P3306 -uroot -pMasterkey123 redpoddb
+    command: |
+      gp await-port 3006
+      mysql -h127.0.0.1 -P3306 -uroot -pMasterkey123 redpoddb
 
   - name: keycloak
     init: gp sync-await compose-up
     command: docker logs -f keycloak
+
+  - name: shell
+    command: echo "this shell is yours to use"
 
 ports:
   - port: 3300
