--- a/.gitpod/docker-compose-gitpod.yml
+++ b/.gitpod/docker-compose-gitpod.yml
@@ -1,7 +1,7 @@
 version: '3.8'
-
 services:  
   mysql:
+#    network_mode: "host"
     container_name: mysql
     image: mysql:latest
     restart: always
@@ -14,6 +14,7 @@ services:
       MYSQL_DATABASE: redpoddb
 
   keycloak:
+#    network_mode: "host"
     container_name: keycloak
     image: quay.io/keycloak/keycloak:latest
     restart: always
@@ -24,18 +25,18 @@ services:
     expose:
       - "8080"
     environment:
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: Masterkey123
+      KEYCLOAK_ADMIN: "admin"
+      KEYCLOAK_ADMIN_PASSWORD: "Masterkey123"
       KC_METRICS_ENABLED: "true"
       KC_HTTP_ENABLED: "true"
-      KC_PROXY: edge
-      KC_DB: mysql
-      KC_DB_URL: jdbc:mysql://mysql:3306/redpoddb
-      KC_DB_USERNAME: root
-      KC_DB_PASSWORD: Masterkey123
-#      KC_HOSTNAME: ${HOSTNAME}.${GITPOD_WORKSPACE_CLUSTER_HOST} \
-#      KC_HOSTNAME_STRICT=true
-#      KC_HOSTNAME_STRICT_BACKCHANNEL=true
-#      KC_LOG_LEVEL=info
+      KC_PROXY: "edge"
+      KC_DB: "mysql"
+      KC_DB_URL: "jdbc:mysql://mysql:3306/redpoddb"
+      KC_DB_USERNAME: "root"
+      KC_DB_PASSWORD: "Masterkey123"
+      KC_HOSTNAME: "8080-${HOSTNAME}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      KC_HOSTNAME_STRICT: "true"
+      KC_HOSTNAME_STRICT_BACKCHANNEL: "true"
+      KC_LOG_LEVEL: "info"
     command:
         start-dev
