gitpod task sync

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ image:
 tasks:
   - name: docker compose
     init: >
-      docker-compose -f .gitpod/docker-compose-gitpod.yml up -d --build
+      docker-compose -f .gitpod/docker-compose-gitpod.yml up -d --build && 
       gp sync-done compose-up
   
   - name: mysql
@@ -14,8 +14,8 @@ tasks:
 
   - name: mysql-client
     init: gp sync-await compose-up
-    command: |
-      gp await-port 3006
+    command: >
+      gp await-port 3006 && 
       mysql -h127.0.0.1 -P3306 -uroot -pMasterkey123 redpoddb
 
   - name: keycloak
