--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,6 +16,7 @@ tasks:
     init: gp sync-await compose-up
     command: >
       gp await-port 3306 && 
+      sleep 5 &&
       mysql -h127.0.0.1 -P3306 -uroot -pMasterkey123 redpoddb
 
   - name: keycloak
