--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,14 +1,13 @@
-apiVersion: 1.0.0
+schemaVersion: 2.1.0
 metadata:
-  generateName: red-pod
+  name: red-pod
+  version: 1.0.0
 projects:
   - name: red-pod
-    source:
-      type: git
-      location: 'https://github.com/caravanacloud/red-pod.git'
-components:
-    - type: dockerimage
-      image: redhat/ubi9
-      memoryLimit: 512Mi
-      command: ['cat', '/etc/redhat-release']
-      
+    git:
+      remotes:
+        origin: "https://github.com/caravanacloud/red-pod.git"
+      checkoutFrom:
+        revision: main
+
+    
