--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,53 +4,8 @@ image:
 
 tasks:
   - name: shell
-    command: echo "this shell is yours to use"
+    command: echo "hello red-pod :)"
 
-  - name: set environment variables
-    before: |
-      gp env OCP_CLUSTER_NAME=rhnb-ocp-cluster
-      gp env OCP_WORKER_ARCH=amd64
-      gp env OCP_WORKER_REPLICAS=3
-      gp env OCP_MASTER_ARCH=amd64
-      gp env OCP_MASTER_REPLICAS=3
-      gp env OCP_CLUSTER_NET_CIDR=10.128.0.0/14
-      gp env OCP_CLUSTER_NET_HOST_PREFIX=23
-      gp env OCP_MACHINE_NET_CIDR=10.0.0.0/16
-      gp env OCP_SERVICE_NET_CIDR=172.30.0.0/16
-      gp env OCP_AWS_REGION=ap-northeast-1
-      eval $(gp env -e)
-
-
-  - name: docker pull and up
-    init: docker-compose -f .gitpod/docker-compose-gitpod.yml pull 
-    command: >
-      docker-compose -f .gitpod/docker-compose-gitpod.yml up -d --build && 
-      gp sync-done compose-up
-  
-  - name: mysql
-    command: >
-      gp sync-await compose-up && 
-      docker logs -f mysql
-
-  - name: mysql-client
-    command: > 
-      gp await-port 3306 && 
-      sleep 30 &&
-      mysql -h127.0.0.1 -P3306 -uroot -pMasterkey123 redpoddb
-
-  - name: keycloak
-    command: >
-      gp sync-await compose-up && 
-      docker logs -f keycloak
-
-  - name: jupyter
-    command: cd jupyter && gp open index.ipynb && jupyter notebook --no-browser
-  
-  - name: temp ssh
-    command: |
-        rm -rf "/tmp/temp_ssh"
-        ssh-keygen -b "2048" -t "ed25519" -f "/tmp/temp_ssh" -q -N ""
-        ls -l "/tmp/temp_ssh"*
 
 ports:
   - port: 3300
@@ -93,6 +48,3 @@ vscode:
     - ms-python.python
     - ms-toolsai.jupyter
     - esbenp.prettier-vscode
-#    - redhat.fabric8-analytics
-#    - GitHub.copilot
-
