--- a/openshift/aws-default/install-config.env.yaml
+++ b/openshift/aws-default/install-config.env.yaml
@@ -14,8 +14,7 @@ controlPlane:
   platform: {}
   replicas: 3
 metadata:
-  creationTimestamp: null
-  name: redpod-aws-sno
+  name: $CLUSTER_NAME
 networking:
   clusterNetwork:
   - cidr: 10.128.0.0/14
@@ -27,7 +26,7 @@ networking:
   - 172.30.0.0/16
 platform:
   aws:
-    region: us-west-2
+    region: $AWS_REGION
 publish: External
 pullSecret: '$PULL_SECRET'
 sshKey: $SSH_KEY
